fix alignment on no image poster items

--- a/src/app/components/now/feed-posters/feed-posters.component.scss
+++ b/src/app/components/now/feed-posters/feed-posters.component.scss
@@ -37,12 +37,16 @@
   transition: 0.1s linear;
 }
 
-.no-img {
+.feed-item-poster-img.no-img {
+  width: 150px;
   height: 150px;
+  margin: auto;
+  overflow: hidden;
 }
 
 .no-poster-thumbnail {
-  font-size: 16px;
+  margin-top: 30%;
+  font-size: 24px;
 }
 
 .feed-item-rating {
